<resources>
    <string name="app_name">BOINC</string>
    <string name="generic_loading">Loading! Please wait&#8230;</string>
    <string name="generic_button_continue">Continue</string>
    <string name="generic_button_finish">Finish</string>
    <string name="attachproject_list_desc">Select scientific projects you want to contribute to:</string>
    <string name="attachproject_list_header">Choose a project</string>
    <string name="attachproject_list_manual_button">Add project by URL</string>
    <string name="attachproject_list_manual_dialog_title">Enter project URL:</string>
    <string name="attachproject_list_manual_dialog_button">Add project</string>
    <string name="attachproject_list_manual_no_url">Please enter project URL</string>
    <string name="attachproject_list_acctmgr_button">Add account manager</string>
    <string name="attachproject_list_no_internet">No Internet connection</string>
    <string name="attachproject_credential_input_sing_desc">Enter account information</string>
    <string name="attachproject_credential_input_desc">Enter account information for selected projects:</string>
    <string name="attachproject_credential_input_show_pwd">Show password</string>
    <string name="attachproject_individual_credential_input">Attach projects individually</string>
    <string name="attachproject_conflicts_desc">There have been problems attaching scientific projects:</string>
    <string name="attachproject_conflict_undefined">Could not connect</string>
    <string name="attachproject_conflict_not_unique">Account exists with different password</string>
    <string name="attachproject_conflict_bad_password">Password incorrect</string>
    <string name="attachproject_conflict_unknown_user">Account does not exist</string>
    <string name="attachproject_conflict_unknown_user_creation_disabled">Account does not exist, visit project website
        to register
    </string>
    <string name="attachproject_working_attaching">Attaching</string>
    <string name="attachproject_hints_header">Hint</string>
    <string name="attachproject_hint_contribtion_header">How to contribute:</string>
    <string name="attachproject_hint_contribtion_wifi">1. Connect to WiFi</string>
    <string name="attachproject_hint_contribtion_charger">2. Plug in Charger</string>
    <string name="attachproject_hint_contribtion_screen">3. Turn off Screen</string>
    <string name="attachproject_hint_projectwebsite_header">Visit project websites to:</string>
    <string name="attachproject_hint_projectwebsite_science">Learn more about the science</string>
    <string name="attachproject_hint_projectwebsite_stats">View contribution statistics</string>
    <string name="attachproject_hint_projectwebsite_community">Get in touch with other volunteers</string>
    <string name="attachproject_hint_platforms_header">BOINC is also available for your computer or laptop, visit
        boinc.berkeley.edu to learn more.
    </string>
    <string name="attachproject_login_loading">Contacting project server&#8230;</string>
    <string name="attachproject_login_image_description">Project logo.</string>
    <string name="attachproject_login_header_general_area">General area:</string>
    <string name="attachproject_login_header_specific_area">Specific area:</string>
    <string name="attachproject_login_header_description">Description:</string>
    <string name="attachproject_login_header_home">Home:</string>
    <string name="attachproject_login_header_url">Website:</string>
    <string name="attachproject_login_header_platform">Android:</string>
    <string name="attachproject_login_platform_supported">Device type is supported by this project</string>
    <string name="attachproject_login_platform_not_supported">Device is not supported by this project</string>
    <string name="attachproject_login_category_terms_of_use">Terms of use for</string>
    <string name="attachproject_login_accept_terms_of_use">By creating an account with this project, you accept the
        terms of use as shown above.
    </string>
    <string name="attachproject_login_category_login">Sign in with existing account</string>
    <string name="attachproject_login_header_id_email">eMail:</string>
    <string name="attachproject_login_header_id_name">Name:</string>
    <string name="attachproject_login_header_pwd">Password:</string>
    <string name="attachproject_login_category_creation">New to</string>
    <string name="attachproject_login_header_creation_enabled">Register an account to participate:</string>
    <string name="attachproject_login_header_creation_client_disabled">Visit project website to create an account:
    </string>
    <string name="attachproject_login_header_creation_disabled">This project is not currently accepting new accounts.
    </string>
    <string name="attachproject_login_button_registration">Register</string>
    <string name="attachproject_login_button_login">Sign in</string>
    <string name="attachproject_login_button_forgotpw">Forgot Password</string>
    <string name="attachproject_login_error_toast">Contacting project failed!</string>
    <string name="attachproject_login_attached">Attached</string>
    <string name="attachproject_registration_header">Account registration for</string>
    <string name="attachproject_registration_header_url">Project:</string>
    <string name="attachproject_registration_header_email">eMail:</string>
    <string name="attachproject_registration_header_username">Name:</string>
    <string name="attachproject_registration_header_teamname">Team:</string>
    <string name="attachproject_registration_header_pwd">Password:</string>
    <string name="attachproject_registration_header_pwd_confirm">&#8230; Retype:</string>
    <string name="attachproject_registration_button">Create</string>
    <string name="attachproject_acctmgr_list_desc">Use BOINC account manager to add and manage multiple projects
    </string>
    <string name="attachproject_acctmgr_header">Add account manager</string>
    <string name="attachproject_acctmgr_header_url">URL</string>
    <string name="attachproject_acctmgr_header_name">User:</string>
    <string name="attachproject_acctmgr_header_pwd">Password:</string>
    <string name="attachproject_acctmgr_header_pwd_confirm">&#8230; Retype:</string>
    <string name="attachproject_acctmgr_button">Add</string>
    <string name="attachproject_error_wrong_name">User not found</string>
    <string name="attachproject_error_short_pwd">Password too short</string>
    <string name="attachproject_error_no_internet">Connection failure</string>
    <string name="attachproject_error_pwd_no_match">Passwords do not match</string>
    <string name="attachproject_error_pwd_no_retype">Please type password again</string>
    <string name="attachproject_error_no_url">Please enter URL</string>
    <string name="attachproject_error_no_email">Please enter eMail address</string>
    <string name="attachproject_error_no_pwd">Please enter a password</string>
    <string name="attachproject_error_no_name">Please enter user name</string>
    <string name="attachproject_error_unknown">failed</string>
    <string name="attachproject_error_bad_username">User name refused</string>
    <string name="attachproject_error_email_in_use">eMail is already in use</string>
    <string name="attachproject_error_project_down">Project is offline</string>
    <string name="attachproject_error_email_bad_syntax">eMail refused</string>
    <string name="attachproject_error_bad_pwd">Password refused</string>
    <string name="attachproject_error_creation_disabled">Account creation is disabled on this project</string>
    <string name="attachproject_error_invalid_url">Invalid URL</string>
    <string name="attachproject_error_consent_required">This project requires to consent to its terms of use</string>
    <string name="attachproject_working_back_button">Back</string>
    <string name="attachproject_working_finish_button">Finish</string>
    <string name="attachproject_working_check_desc">Successful</string>
    <string name="attachproject_working_failed_desc">Failed</string>
    <string name="attachproject_working_ongoing">&#8230;</string>
    <string name="attachproject_working_finished">.</string>
    <string name="tab_projects">Projects</string>
    <string name="tab_tasks">Tasks</string>
    <string name="tab_preferences">Preferences</string>
    <string name="tab_notices">Notices</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_network">Network</string>
    <string name="prefs_category_power">Power</string>
    <string name="prefs_category_cpu">CPU</string>
    <string name="prefs_category_storage">Storage</string>
    <string name="prefs_category_memory">Memory</string>
    <string name="prefs_category_other">Other</string>
    <string name="prefs_category_debug">Debug</string>
    <string name="prefs_show_advanced_header">Enable advanced preferences and controls</string>
    <string name="prefs_suspend_when_screen_on">Pause computation when screen is on</string>
    <string name="prefs_general_device_name_header">Device name</string>
    <string name="prefs_theme_header">Theme</string>
    <string name="prefs_stationary_device_mode_header">Stationary device mode</string>
    <string name="prefs_stationary_device_mode_description">Allows computation regardless of Power preferences. Only
        enable if device does not have a battery.
    </string>
    <string name="prefs_power_source_header">Power sources for computation</string>
    <string name="battery_charge_min_pct_header">Min. battery level (%)</string>
    <string name="battery_temperature_max_header">Max. battery temperature (°C)</string>
    <string name="prefs_disk_max_pct_header">Max. used storage space</string>
    <string name="prefs_disk_min_free_gb_header">Min. spare storage (MB)</string>
    <string name="prefs_disk_access_interval_header">Access interval (seconds)</string>
    <string name="prefs_network_daily_xfer_limit_mb_header">Daily transfer limit (days)</string>
    <string name="prefs_network_wifi_only_header">Transfer tasks on WiFi only</string>
    <string name="prefs_autostart_header">Autostart</string>
    <string name="prefs_show_notification_notices_header">Show notification for new notices</string>
    <string name="prefs_cpu_number_cpus_header">Used CPU cores</string>
    <string name="prefs_cpu_number_cpus_description">Limits the number of CPU cores BOINC uses for computation.</string>
    <string name="prefs_cpu_other_load_suspension_header">Pause at CPU usage above (%)</string>
    <string name="prefs_cpu_other_load_suspension_description">Determines when BOINC pauses computation due to other
        apps\' CPU usage.
    </string>
    <string name="prefs_cpu_time_max_header">CPU limit (%)</string>
    <string name="prefs_cpu_time_max_description">Limits the CPU time BOINC uses for computation.</string>
    <string name="prefs_memory_max_idle_header">RAM limit (%)</string>
    <string name="prefs_other_store_at_least_x_days_of_work_header">Work unit buffer</string>
    <string name="prefs_other_store_up_to_an_additional_x_days_of_work_header">Additional work unit buffer</string>
    <string name="prefs_client_log_flags_header">BOINC client log flags</string>
    <string name="prefs_gui_log_level_header">GUI log level</string>
    <string name="prefs_gui_log_level_description">Specifies verbosity of GUI log messages.</string>
    <string name="projects_add">Add project</string>
    <string name="projects_control_update">Update</string>
    <string name="projects_control_remove">Remove</string>
    <string name="projects_control_suspend">Suspend</string>
    <string name="projects_control_nonewtasks">No new tasks</string>
    <string name="projects_control_reset">Reset</string>
    <string name="menu_eventlog">Event Log</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
</resources>