<?xml version="1.0" encoding="utf-8"?><!--
  This file is part of BOINC.
  http://boinc.berkeley.edu
  Copyright (C) 2020 University of California

  BOINC is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License
  as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later version.

  BOINC is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Lesser General Public License for more details.

  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_tasks"
                android:icon="@drawable/ic_baseline_list"
                android:title="@string/tab_tasks" />
        <item
                android:id="@+id/nav_notices"
                android:icon="@drawable/ic_baseline_email"
                android:title="@string/tab_notices" />
        <item
                android:id="@+id/nav_projects"
                android:icon="@drawable/ic_projects"
                android:title="@string/tab_projects" />
        <item
                android:id="@+id/nav_add_project"
                android:icon="@drawable/ic_baseline_add_box"
                android:title="@string/projects_add" />
        <item
                android:id="@+id/nav_preferences"
                android:icon="@drawable/ic_baseline_settings"
                android:title="@string/tab_preferences" />
        <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_baseline_help"
                android:title="@string/menu_help" />
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_baseline_info"
                android:title="@string/menu_about" />
        <item
                android:id="@+id/nav_event_log"
                android:icon="@drawable/ic_baseline_warning"
                android:title="@string/menu_eventlog" />
    </group>
</menu>
