<?xml version="1.0" encoding="utf-8"?><!--
  This file is part of BOINC.
  http://boinc.berkeley.edu
  Copyright (C) 2020 University of California
  
  BOINC is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License
  as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later version.
  
  BOINC is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Lesser General Public License for more details.
  
  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/projects_control_update"
            android:enabled="true"
            android:visible="true"
            android:title="@string/projects_control_update"/>
    <item
            android:id="@+id/projects_control_suspend"
            android:enabled="true"
            android:visible="true"
            android:title="@string/projects_control_suspend"/>
    <item
            android:id="@+id/projects_control_nonewtasks"
            android:enabled="true"
            android:visible="true"
            android:title="@string/projects_control_nonewtasks"/>
    <item
            android:id="@+id/projects_control_reset"
            android:enabled="true"
            android:visible="true"
            android:title="@string/projects_control_reset"/>
    <item
            android:id="@+id/projects_control_remove"
            android:enabled="true"
            android:visible="true"
            android:title="@string/projects_control_remove"/>
</menu>
