<?xml version="1.0" encoding="utf-8"?><!--
  This file is part of BOINC.
  http://boinc.berkeley.edu
  Copyright (C) 2020 University of California
  
  BOINC is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License
  as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later version.
  
  BOINC is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Lesser General Public License for more details.
  
  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:maxWidth="400dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_boinc_logo"
            android:contentDescription="@string/app_name"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:id="@+id/desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/attachproject_credential_input_desc"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_below="@+id/logo"
            android:padding="5dp"
            android:background="@drawable/shape_dark_blue_background"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"/>

    <ScrollView
            android:id="@+id/input_sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc"
            android:layout_marginBottom="50dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/email_input"
                    android:inputType="textEmailAddress"
                    android:hint="@string/attachproject_login_header_id_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            <EditText
                    android:id="@+id/name_input"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/attachproject_login_header_id_name"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            <EditText
                    android:id="@+id/pwd_input"
                    android:inputType="textPassword"
                    android:hint="@string/attachproject_login_header_pwd"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

            <CheckBox
                    android:id="@+id/show_pwd_cb"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/attachproject_credential_input_show_pwd"
                    android:layout_marginBottom="10dp"/>

            <TextView
                    android:id="@+id/individual_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attachproject_individual_credential_input"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:background="@drawable/shape_button_grey"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="individualClicked"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"/>
        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_button_blue"
            android:minWidth="150dp"
            android:onClick="continueClicked"
            android:padding="5dp"
            android:text="@string/generic_button_continue"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
</RelativeLayout>
